Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24248

QApplication: If the application goes out of scope before the NSApplication is finished with then it can cause a crash

    XMLWordPrintable

Details

    • 5032ca8cde5ed6fa39acfde650d373fcb4ea7807

    Description

      QApplication: If the application goes out of scope before the NSApplication is finished with then it can cause a crash due to the fact that the sendEvent replacement has not been undone when the QApplication has been deleted.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes