Ensure that QApplication is cleaned up after itself on Mac

If the sendEvent function is replaced on the NSApplication, then
QApplication should ensure that it undoes that if it is destroyed while
the NSApplication is still running.

Task-number: QTBUG-24248
Change-Id: I087ae575b7d670fa8dacfb80636d813c7bceb41d
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@nokia.com>